Importing translations for metadata crosswalks from RODA

--- a/src/main/resources/properties/lang_hr.properties
+++ b/src/main/resources/properties/lang_hr.properties
@@ -414,6 +414,10 @@ IPContentType.RDBMS=Relacijski sustav upravljanja bazama podataka
 IPContentType.SMURF=SMURF
 
 
+##########################################
+# dissemination: html (xslt, etc)
+##########################################
+
 crosswalks.dissemination.html.ead.creator=Ime (imena) autora
 crosswalks.dissemination.html.ead.producer=Proizvo\u0111a\u010D
 crosswalks.dissemination.html.ead.publicationdate=Datum objave
@@ -530,3 +534,105 @@ crosswalks.dissemination.html.ead.level.SSUI=Subsubcontainers
 crosswalks.dissemination.html.ead.level.SUI=Spremnik
 crosswalks.dissemination.html.ead.level.UI=Instalacijska jedinica
 crosswalks.dissemination.html.ead.level.DS=Stavka
+
+crosswalks.dissemination.html.ead_3.title=Naslov
+crosswalks.dissemination.html.ead_3.titletype=Vrsta naslova
+crosswalks.dissemination.html.ead_3.level=Razina
+crosswalks.dissemination.html.ead_3.initialdate=Datum po\u010Detka
+crosswalks.dissemination.html.ead_3.finaldate=Datum zavr\u0161etka
+crosswalks.dissemination.html.ead_3.repositorycode=Kod spremi\u0161ta
+crosswalks.dissemination.html.ead_3.reference=Preporuka
+crosswalks.dissemination.html.ead_3.acquisitionnumber=Broj stjecanja
+crosswalks.dissemination.html.ead_3.origination=Podrijetlo
+crosswalks.dissemination.html.ead_3.acquistiondate=Datum stjecanja
+crosswalks.dissemination.html.ead_3.materialspecification=Specifikacija materijala
+crosswalks.dissemination.html.ead_3.physicaldescription=Fizi\u010Dki opis
+crosswalks.dissemination.html.ead_3.dateofinitialphysicaldescription=Datum po\u010Detnog fizi\u010Dkog opisa
+crosswalks.dissemination.html.ead_3.dateoffinalphysicaldescription=Datum kona\u010Dnog fizi\u010Dkog opisa
+crosswalks.dissemination.html.ead_3.dimensions=Dimenzije
+crosswalks.dissemination.html.ead_3.facetorappearance=Aspekt ili izgled
+crosswalks.dissemination.html.ead_3.extent=Opseg
+crosswalks.dissemination.html.ead_3.languages=Jezici
+crosswalks.dissemination.html.ead_3.quote=Citat
+crosswalks.dissemination.html.ead_3.administrativeandbiographicalhistory=Upravna i biografska povijest
+crosswalks.dissemination.html.ead_3.custodialhistory=Povijest skrbni\u0161tva
+crosswalks.dissemination.html.ead_3.acquisitioninformation=Podaci o stjecanju
+crosswalks.dissemination.html.ead_3.description=Opis
+crosswalks.dissemination.html.ead_3.organizationandordering=Organizacija i poredak
+crosswalks.dissemination.html.ead_3.appraisal=Procjena
+crosswalks.dissemination.html.ead_3.accruals=Razgrani\u010Denja
+crosswalks.dissemination.html.ead_3.physicalcharacteristicsandtechnicalrequirements=Fizi\u010Dke karakteristike i tehni\u010Dki zahtjevi
+crosswalks.dissemination.html.ead_3.accessrestrictions=Ograni\u010Denja pristupa
+crosswalks.dissemination.html.ead_3.altformavail=Dostupni zamjenski formati
+crosswalks.dissemination.html.ead_3.reproductionrestrictions=Ograni\u010Denja umno\u017Eavanja
+crosswalks.dissemination.html.ead_3.relatedmaterials=Povezani materijali
+crosswalks.dissemination.html.ead_3.otherfindaids=Ostala pomagala za pronala\u017Eenje
+crosswalks.dissemination.html.ead_3.userestrict=Ograni\u010Denja uporabe
+crosswalks.dissemination.html.ead_3.notes=Bilje\u0161ke
+crosswalks.dissemination.html.ead_3.originalsloc= Izvorna lokacija
+crosswalks.dissemination.html.ead_3.bibliography=Bibliografija
+crosswalks.dissemination.html.ead_3.unitdate=Datum
+crosswalks.dissemination.html.ead_3.control.recordid=Identifikator
+crosswalks.dissemination.html.ead_3.control.otherrecordid=Drugi identifikator
+crosswalks.dissemination.html.ead_3.control.maintenancestatus=Status odr\u017Eavanja
+crosswalks.dissemination.html.ead_3.control.publicationstatus=Status izdanja
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.language=Jezik
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.script=Rukopis
+crosswalks.dissemination.html.ead_3.control.filedesc.titlestmt=Naslov
+crosswalks.dissemination.html.ead_3.control.filedesc.publicationstmt=Izdanje
+crosswalks.dissemination.html.ead_3.control.maintenanceagency=Agencija za odr\u017Eavanje
+crosswalks.dissemination.html.ead_3.control=Provjera
+crosswalks.dissemination.html.ead_3.archdesc=Arhivski opis
+crosswalks.dissemination.html.ead_3.control.titlestmt.titleproper=Naslov
+crosswalks.dissemination.html.ead_3.control.titlestmt.subtitle=Podnaslov
+crosswalks.dissemination.html.ead_3.control.titlestmt.author=Autor
+crosswalks.dissemination.html.ead_3.control.titlestmt.sponsor=Pokrovitelj
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencycode=Kod agencije
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.otheragencycode=Drugi kod agencije
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencyname=Naziv agencije
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.descriptivenote=Bilje\u0161ka opisa agencije
+
+crosswalks.dissemination.html.dc.title=Naslov
+crosswalks.dissemination.html.dc.description=Opis
+crosswalks.dissemination.html.dc.contributor=Suradnik
+crosswalks.dissemination.html.dc.coverage=Pokrivenost
+crosswalks.dissemination.html.dc.creator=Autor
+crosswalks.dissemination.html.dc.date=Datum
+crosswalks.dissemination.html.dc.date.initial=Datum po\u010Detka
+crosswalks.dissemination.html.dc.date.final=Datum zavr\u0161eka
+crosswalks.dissemination.html.dc.format=Format
+crosswalks.dissemination.html.dc.identifier=Identifikator
+crosswalks.dissemination.html.dc.language=Jezik
+crosswalks.dissemination.html.dc.publisher=Izdava\u010D
+crosswalks.dissemination.html.dc.relation=Veza
+crosswalks.dissemination.html.dc.rights=Prava
+crosswalks.dissemination.html.dc.source=Izvor
+crosswalks.dissemination.html.dc.subject=Predmet
+crosswalks.dissemination.html.dc.type=Vrsta
+
+crosswalks.dissemination.html.dc_simpledc20021212.title=Naslov
+crosswalks.dissemination.html.dc_simpledc20021212.description=Opis
+crosswalks.dissemination.html.dc_simpledc20021212.contributor=Suradnik
+crosswalks.dissemination.html.dc_simpledc20021212.coverage=Pokrivenost
+crosswalks.dissemination.html.dc_simpledc20021212.creator=Autor
+crosswalks.dissemination.html.dc_simpledc20021212.date=Datum
+crosswalks.dissemination.html.dc_simpledc20021212.date.initial=Datum po\u010Detka
+crosswalks.dissemination.html.dc_simpledc20021212.date.final=Datum zavr\u0161etka
+crosswalks.dissemination.html.dc_simpledc20021212.format=Format
+crosswalks.dissemination.html.dc_simpledc20021212.identifier=Identifikator
+crosswalks.dissemination.html.dc_simpledc20021212.language=Jezik
+crosswalks.dissemination.html.dc_simpledc20021212.publisher=Izdava\u010D
+crosswalks.dissemination.html.dc_simpledc20021212.relation=Veza
+crosswalks.dissemination.html.dc_simpledc20021212.rights=Prava
+crosswalks.dissemination.html.dc_simpledc20021212.source=Izvor
+crosswalks.dissemination.html.dc_simpledc20021212.subject=Predmet
+crosswalks.dissemination.html.dc_simpledc20021212.type=Vrsta
+
+crosswalks.dissemination.html.event.identifierType: Vrsta identifikatora
+crosswalks.dissemination.html.event.identifierValue: Vrijednost identifikatora
+crosswalks.dissemination.html.event.dateTime: Datum
+crosswalks.dissemination.html.event.outcome: Ishod
+crosswalks.dissemination.html.event.type: Vrsta
+crosswalks.dissemination.html.event.detail: Detalj
+crosswalks.dissemination.html.event.outcomeDetailNote: Bilje\u0161ka
+crosswalks.dissemination.html.event.outcomeDetailExtension: Ekstenzija
