--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -412,3 +412,227 @@ i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = Illetékes levéltár a
 i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = Annak a levéltári szervezetnek az azonosítója, amely az elektronikus átvételi csomag befogadását végzi.
 IPContentType.RDBMS=Relációs Adatbáziskezelő Rendszer
 IPContentType.SMURF=Szemantikusan jelölt formátum
+
+
+##########################################
+# dissemination: html (xslt, etc)
+##########################################
+
+crosswalks.dissemination.html.ead.creator=Alkotó(k) neve(i)
+crosswalks.dissemination.html.ead.producer=Gyártó
+crosswalks.dissemination.html.ead.publicationdate=Megjelenés dátuma
+crosswalks.dissemination.html.ead.custodialhistory=Gondnoksági előzmények
+crosswalks.dissemination.html.ead.acquisitioninformation=A beszerzés vagy átadás közvetlen forrása
+crosswalks.dissemination.html.ead.acquisitionnumber=Beszerzési szám
+crosswalks.dissemination.html.ead.acquistiondate=Beszerzés időpontja
+crosswalks.dissemination.html.ead.contentarea=Tartalom és szerkezet
+crosswalks.dissemination.html.ead.description=Terjedelem és tartalom
+crosswalks.dissemination.html.ead.accessarea=Hozzáférés és a használat feltételei
+crosswalks.dissemination.html.ead.accessrestrictions=Hozzáférési feltételek
+crosswalks.dissemination.html.ead.languageScriptNotes=Nyelvi és formai megjegyzések
+crosswalks.dissemination.html.ead.languages=Anyag nyelve
+crosswalks.dissemination.html.ead.phystech=Fizikai jellemzők és technikai követelmények
+crosswalks.dissemination.html.ead.otherfindaids=Egyéb leletmentő eszközök
+crosswalks.dissemination.html.ead.alliedarea=Kapcsolódó anyagok
+crosswalks.dissemination.html.ead.relatedmaterials=Kapcsolódó leírások
+crosswalks.dissemination.html.ead.oddarea=Egyéb leíró metaadatok
+crosswalks.dissemination.html.ead.accesspointarea=Hozzáférési pontok
+crosswalks.dissemination.html.ead.nameaccesspoint=Hozzáférési pont megnevezése
+crosswalks.dissemination.html.ead.subjectaccesspoint=Tárgy hozzáférési pontja
+crosswalks.dissemination.html.ead.placeaccesspoint=Hozzáférési pont elhelyezése
+crosswalks.dissemination.html.ead.descriptionidentifier=Leírás azonosítója
+crosswalks.dissemination.html.ead.institutionidentifier=Intézmény azonosítója
+crosswalks.dissemination.html.ead.rules=Szabályok vagy konvenciók
+crosswalks.dissemination.html.ead.statusdescription=Leírás állapota
+crosswalks.dissemination.html.ead.levelofdetail=Részletesség szintje
+crosswalks.dissemination.html.ead.processdates=Létrehozás vagy felülvizsgálat dátuma
+crosswalks.dissemination.html.ead.sources=Források
+crosswalks.dissemination.html.ead.archivistNotes=Levéltári feljegyzések
+crosswalks.dissemination.html.ead.materialspecification=Anyagspecifikus részletek
+crosswalks.dissemination.html.ead.physicaldescription=Fizikai leírás
+crosswalks.dissemination.html.ead.administrativeandbiographicalhistory=Közigazgatási és életrajzi előzmények
+crosswalks.dissemination.html.ead.facetorappearance=Facetta vagy megjelenés
+crosswalks.dissemination.html.ead.quote=Idézet
+crosswalks.dissemination.html.ead.level.fonds=Fondjegyzékek
+crosswalks.dissemination.html.ead.level.class=Osztály
+crosswalks.dissemination.html.ead.level.collection=Gyűjtemény
+crosswalks.dissemination.html.ead.level.recordgrp=Rekordok csoportja
+crosswalks.dissemination.html.ead.level.subgrp=Alcsoport
+crosswalks.dissemination.html.ead.level.subfonds=Részalapok
+crosswalks.dissemination.html.ead.level.series=Sorozat
+crosswalks.dissemination.html.ead.level.subseries=Alsorozatok
+crosswalks.dissemination.html.ead.level.file=Fájl
+crosswalks.dissemination.html.ead.level.item=Elem
+crosswalks.dissemination.html.ead.origination=Keletkezés helye
+crosswalks.dissemination.html.ead.dateofinitialphysicaldescription=Az első fizikai leírás dátuma
+crosswalks.dissemination.html.ead.dateoffinalphysicaldescription=Az utolsó fizikai leírás dátuma
+crosswalks.dissemination.html.ead.materialspec=Anyagspecifikáció
+crosswalks.dissemination.html.ead.physfacet=Fizikai aspektus
+crosswalks.dissemination.html.ead.levelofdetail.full=Teljes
+crosswalks.dissemination.html.ead.levelofdetail.partial=Részleges
+crosswalks.dissemination.html.ead.levelofdetail.minimal=Minimális
+crosswalks.dissemination.html.ead.statusdescription.final=Végleges
+crosswalks.dissemination.html.ead.statusdescription.revised=Felülvizsgált
+crosswalks.dissemination.html.ead.statusdescription.draft=Vázlat
+crosswalks.dissemination.html.ead.identityarea=Identitás
+crosswalks.dissemination.html.ead.level=Leírás szintje
+crosswalks.dissemination.html.ead.otherlevel=Egyéb szint
+crosswalks.dissemination.html.ead.reference=Referencia kód
+crosswalks.dissemination.html.ead.repositorycode=Repozitórium kód
+crosswalks.dissemination.html.ead.countrycode=Ország kódja
+crosswalks.dissemination.html.ead.title=Cím
+crosswalks.dissemination.html.ead.titletype=Cím típus
+crosswalks.dissemination.html.ead.repository=Repozitórium
+crosswalks.dissemination.html.ead.initialdate=Kezdés dátuma
+crosswalks.dissemination.html.ead.finaldate=Befejezés dátuma
+crosswalks.dissemination.html.ead.unitdate=Leírás dátuma
+crosswalks.dissemination.html.ead.dimensions=Méretek és támogatás
+crosswalks.dissemination.html.ead.extent=Terjedelem
+crosswalks.dissemination.html.ead.contextarea=Kontextus
+#crosswalks.dissemination.html.ead.author=Author
+crosswalks.dissemination.html.ead.bioghist=Életrajz vagy előzmények
+crosswalks.dissemination.html.ead.geogname=Földrajzi név
+crosswalks.dissemination.html.ead.legalstatus=Jogi státusz
+crosswalks.dissemination.html.ead.custodhist=Gondnoksági előzmények
+crosswalks.dissemination.html.ead.acqinfo=Beszerzési információ
+crosswalks.dissemination.html.ead.contentstructurearea=Tartalom és szerkezet
+crosswalks.dissemination.html.ead.scopecontent=Terjedelem és tartalom
+crosswalks.dissemination.html.ead.appraisal=Értékelési információ
+crosswalks.dissemination.html.ead.accruals=Elhatárolások
+crosswalks.dissemination.html.ead.arrangement=Elrendezés módja
+crosswalks.dissemination.html.ead.useaccessarea=Hozzáférés és felhasználás
+crosswalks.dissemination.html.ead.accessrestrict=Hozzáférési korlátozások
+crosswalks.dissemination.html.ead.userestrict=Felhasználási feltételek
+crosswalks.dissemination.html.ead.physloc=Fizikai elhelyezkedés
+crosswalks.dissemination.html.ead.langmaterial=Anyag nyelve
+crosswalks.dissemination.html.ead.alliedmaterialarea=Kapcsolódó dokumentáció
+crosswalks.dissemination.html.ead.originalsloc=Eredeti példányok helye
+crosswalks.dissemination.html.ead.altformavail=Elérhető alternatív forma
+crosswalks.dissemination.html.ead.bibliography=Kiadási jegyzetek
+crosswalks.dissemination.html.ead.notesarea=Jegyzetek
+crosswalks.dissemination.html.ead.notes=Jegyzetek
+crosswalks.dissemination.html.ead.descriptioncontrolarea=Leírás vezérlés
+crosswalks.dissemination.html.ead.processinfo=Levéltári feljegyzések
+crosswalks.dissemination.html.ead.level.AG=Összesítés
+crosswalks.dissemination.html.ead.level.C=Gyűjtemény
+crosswalks.dissemination.html.ead.level.CL=Gyűjtemény
+crosswalks.dissemination.html.ead.level.D=Elem
+crosswalks.dissemination.html.ead.level.DC=Fájl
+crosswalks.dissemination.html.ead.level.F=Fondjegyzékek
+crosswalks.dissemination.html.ead.level.P=Gyártó
+crosswalks.dissemination.html.ead.level.SC=Szakasz
+crosswalks.dissemination.html.ead.level.SCL=Algyűjtemény
+crosswalks.dissemination.html.ead.level.SF=Részalapok
+crosswalks.dissemination.html.ead.level.SR=Sorozat
+crosswalks.dissemination.html.ead.level.SSC=Alszakasz
+crosswalks.dissemination.html.ead.level.SSCL=Részgyűjtemény
+crosswalks.dissemination.html.ead.level.SSF=Részalapok
+crosswalks.dissemination.html.ead.level.SSR=Alsorozat
+crosswalks.dissemination.html.ead.level.SSSC=Alszakasz
+crosswalks.dissemination.html.ead.level.SSSR=Részsorozatok
+crosswalks.dissemination.html.ead.level.SSUI=Résztárolók
+crosswalks.dissemination.html.ead.level.SUI=Altárlók
+crosswalks.dissemination.html.ead.level.UI=Telepítőegység
+crosswalks.dissemination.html.ead.level.DS=Elem
+
+crosswalks.dissemination.html.ead_3.title=Cím
+crosswalks.dissemination.html.ead_3.titletype=Cím típus
+crosswalks.dissemination.html.ead_3.level=Szint
+crosswalks.dissemination.html.ead_3.initialdate=Kezdés dátuma
+crosswalks.dissemination.html.ead_3.finaldate=Befejezés dátuma
+crosswalks.dissemination.html.ead_3.repositorycode=Repozitórium kód
+crosswalks.dissemination.html.ead_3.reference=Referencia
+crosswalks.dissemination.html.ead_3.acquisitionnumber=Beszerzési szám
+crosswalks.dissemination.html.ead_3.origination=Keletkezés helye
+crosswalks.dissemination.html.ead_3.acquistiondate=Beszerzés időpontja
+crosswalks.dissemination.html.ead_3.materialspecification=Anyagspecifikáció
+crosswalks.dissemination.html.ead_3.physicaldescription=Fizikai leírás
+crosswalks.dissemination.html.ead_3.dateofinitialphysicaldescription=Az első fizikai leírás dátuma
+crosswalks.dissemination.html.ead_3.dateoffinalphysicaldescription=Az utolsó fizikai leírás dátuma
+crosswalks.dissemination.html.ead_3.dimensions=Méretek
+crosswalks.dissemination.html.ead_3.facetorappearance=Facetta vagy megjelenés
+crosswalks.dissemination.html.ead_3.extent=Terjedelem
+crosswalks.dissemination.html.ead_3.languages=Nyelvek
+crosswalks.dissemination.html.ead_3.quote=Idézet
+crosswalks.dissemination.html.ead_3.administrativeandbiographicalhistory=Közigazgatási és életrajzi előzmények
+crosswalks.dissemination.html.ead_3.custodialhistory=Gondnoksági előzmények
+crosswalks.dissemination.html.ead_3.acquisitioninformation=Beszerzési információ
+crosswalks.dissemination.html.ead_3.description=Leírás
+crosswalks.dissemination.html.ead_3.organizationandordering=Szervezet és megrendelés
+crosswalks.dissemination.html.ead_3.appraisal=Értékelés
+crosswalks.dissemination.html.ead_3.accruals=Elhatárolások
+crosswalks.dissemination.html.ead_3.physicalcharacteristicsandtechnicalrequirements=Fizikai jellemzők és technikai követelmények
+crosswalks.dissemination.html.ead_3.accessrestrictions=Hozzáférési korlátozások
+crosswalks.dissemination.html.ead_3.altformavail=Elérhető alternatív formátumok
+crosswalks.dissemination.html.ead_3.reproductionrestrictions=Többszörözési korlátozások
+crosswalks.dissemination.html.ead_3.relatedmaterials=Kapcsolódó anyagok
+crosswalks.dissemination.html.ead_3.otherfindaids=Egyéb találati segédeszközök
+crosswalks.dissemination.html.ead_3.userestrict=Felhasználási korlátozások
+crosswalks.dissemination.html.ead_3.notes=Jegyzetek
+crosswalks.dissemination.html.ead_3.originalsloc= Eredeti helyszín
+crosswalks.dissemination.html.ead_3.bibliography=Bibliográfia
+crosswalks.dissemination.html.ead_3.unitdate=Dátum
+crosswalks.dissemination.html.ead_3.control.recordid=Azonosító
+crosswalks.dissemination.html.ead_3.control.otherrecordid=Egyéb azonosító
+crosswalks.dissemination.html.ead_3.control.maintenancestatus=Karbantartási állapot
+crosswalks.dissemination.html.ead_3.control.publicationstatus=Megjelenés éllapota
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.language=Nyelv
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.script=Szkript
+crosswalks.dissemination.html.ead_3.control.filedesc.titlestmt=Cím
+crosswalks.dissemination.html.ead_3.control.filedesc.publicationstmt=Kiadás
+crosswalks.dissemination.html.ead_3.control.maintenanceagency=Karbantartó hivatal
+crosswalks.dissemination.html.ead_3.control=Vezérlés
+crosswalks.dissemination.html.ead_3.archdesc=Levéltári leírás
+crosswalks.dissemination.html.ead_3.control.titlestmt.titleproper=Cím
+crosswalks.dissemination.html.ead_3.control.titlestmt.subtitle=Alcím
+crosswalks.dissemination.html.ead_3.control.titlestmt.author=Szerző
+crosswalks.dissemination.html.ead_3.control.titlestmt.sponsor=Szponzor
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencycode=Képviselet kód
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.otheragencycode=Egyéb képviseleti kód
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencyname=Képviselet neve
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.descriptivenote=Képviselet leíró jegyzéke
+
+crosswalks.dissemination.html.dc.title=Cím
+crosswalks.dissemination.html.dc.description=Leírás
+crosswalks.dissemination.html.dc.contributor=Támogató
+crosswalks.dissemination.html.dc.coverage=Fedezet
+crosswalks.dissemination.html.dc.creator=Alkotó
+crosswalks.dissemination.html.dc.date=Dátum
+crosswalks.dissemination.html.dc.date.initial=Kezdés dátuma
+crosswalks.dissemination.html.dc.date.final=Befejezés dátuma
+crosswalks.dissemination.html.dc.format=Formátum
+crosswalks.dissemination.html.dc.identifier=Azonosító
+crosswalks.dissemination.html.dc.language=Nyelv
+crosswalks.dissemination.html.dc.publisher=Kiadó
+crosswalks.dissemination.html.dc.relation=Kapcsolat
+crosswalks.dissemination.html.dc.rights=Jogok
+crosswalks.dissemination.html.dc.source=Forrás
+crosswalks.dissemination.html.dc.subject=Tárgy
+crosswalks.dissemination.html.dc.type=Típus
+
+crosswalks.dissemination.html.dc_simpledc20021212.title=Cím
+crosswalks.dissemination.html.dc_simpledc20021212.description=Leírás
+crosswalks.dissemination.html.dc_simpledc20021212.contributor=Támogató
+crosswalks.dissemination.html.dc_simpledc20021212.coverage=Fedezet
+crosswalks.dissemination.html.dc_simpledc20021212.creator=Alkotó
+crosswalks.dissemination.html.dc_simpledc20021212.date=Dátum
+crosswalks.dissemination.html.dc_simpledc20021212.date.initial=Kezdés dátuma
+crosswalks.dissemination.html.dc_simpledc20021212.date.final=Befejezés dátuma
+crosswalks.dissemination.html.dc_simpledc20021212.format=Formátum
+crosswalks.dissemination.html.dc_simpledc20021212.identifier=Azonosító
+crosswalks.dissemination.html.dc_simpledc20021212.language=Nyelv
+crosswalks.dissemination.html.dc_simpledc20021212.publisher=Kiadó
+crosswalks.dissemination.html.dc_simpledc20021212.relation=Kapcsolat
+crosswalks.dissemination.html.dc_simpledc20021212.rights=Jogok
+crosswalks.dissemination.html.dc_simpledc20021212.source=Forrás
+crosswalks.dissemination.html.dc_simpledc20021212.subject=Tárgy
+crosswalks.dissemination.html.dc_simpledc20021212.type=Típus
+
+crosswalks.dissemination.html.event.identifierType: Azonosító típusa
+crosswalks.dissemination.html.event.identifierValue: Azonosító értéke
+crosswalks.dissemination.html.event.dateTime: Dátum
+crosswalks.dissemination.html.event.outcome: Eredmény
+crosswalks.dissemination.html.event.type: Típus
+crosswalks.dissemination.html.event.detail: Részlet
+crosswalks.dissemination.html.event.outcomeDetailNote: Jegyzet
+crosswalks.dissemination.html.event.outcomeDetailExtension: Bővítmény
