--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -417,6 +417,63 @@ i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID of the organis
 IPContentType.RDBMS=Sistema de Gest\u00E3o de Bases de Dados Relacionais
 IPContentType.SMURF=SMURF
 
+##########################################
+# dissemination: html (xslt, etc)
+##########################################
+
+crosswalks.dissemination.html.ead.creator=Nome(s) do(s) autor(es)
+crosswalks.dissemination.html.ead.producer=Produtor
+crosswalks.dissemination.html.ead.publicationdate=Data de publicação
+crosswalks.dissemination.html.ead.custodialhistory=História custodial e arquivística
+crosswalks.dissemination.html.ead.acquisitioninformation=Fonte imediata de aquisição ou transferência
+crosswalks.dissemination.html.ead.acquisitionnumber=Número de aquisição
+crosswalks.dissemination.html.ead.acquistiondate=Data de aquisição
+crosswalks.dissemination.html.ead.contentarea=Conteúdo e estrutura
+crosswalks.dissemination.html.ead.description=Âmbito e conteúdo
+crosswalks.dissemination.html.ead.accessarea=Acesso e utilização
+crosswalks.dissemination.html.ead.accessrestrictions=Condições de acesso
+crosswalks.dissemination.html.ead.languageScriptNotes=Idioma e escrita
+crosswalks.dissemination.html.ead.languages=Idioma dos materiais
+crosswalks.dissemination.html.ead.phystech=Caraterísticas físicas e requisitos técnicos
+crosswalks.dissemination.html.ead.otherfindaids=Outros auxiliares de pesquisa
+crosswalks.dissemination.html.ead.alliedarea=Documentação associada
+crosswalks.dissemination.html.ead.relatedmaterials=Unidades de descrição relacionadas
+crosswalks.dissemination.html.ead.oddarea=Outros metadados descritivos
+crosswalks.dissemination.html.ead.accesspointarea=Pontos de acesso
+crosswalks.dissemination.html.ead.nameaccesspoint=Nome do ponto de acesso
+crosswalks.dissemination.html.ead.subjectaccesspoint=Assunto do ponto de acesso
+crosswalks.dissemination.html.ead.placeaccesspoint=Lugar do ponto de acesso
+crosswalks.dissemination.html.ead.descriptionidentifier=Identificador da descrição
+crosswalks.dissemination.html.ead.institutionidentifier=Identificador da instituição
+crosswalks.dissemination.html.ead.rules=Regras ou convenções
+crosswalks.dissemination.html.ead.statusdescription=Estado da descrição
+crosswalks.dissemination.html.ead.levelofdetail=Nível de detalhe
+crosswalks.dissemination.html.ead.processdates=Data de criação ou revisão
+crosswalks.dissemination.html.ead.sources=Fontes
+crosswalks.dissemination.html.ead.archivistNotes=Notas do arquivista
+crosswalks.dissemination.html.ead.materialspecification=Especificações do material
+crosswalks.dissemination.html.ead.physicaldescription=Descrição física
+crosswalks.dissemination.html.ead.administrativeandbiographicalhistory=História administrativa e biográfica
+crosswalks.dissemination.html.ead.facetorappearance=Aspecto ou aparência
+crosswalks.dissemination.html.ead.quote=Citação
+crosswalks.dissemination.html.ead.level.fonds=Fundo
+crosswalks.dissemination.html.ead.level.class=Classe
+crosswalks.dissemination.html.ead.level.collection=Coleção
+crosswalks.dissemination.html.ead.level.recordgrp=Grupo de registos
+crosswalks.dissemination.html.ead.level.subgrp=Subgrupo
+crosswalks.dissemination.html.ead.level.subfonds=Subfundo
+crosswalks.dissemination.html.ead.level.series=Série
+crosswalks.dissemination.html.ead.level.subseries=Subsérie
+crosswalks.dissemination.html.ead.level.file=Documento composto
+crosswalks.dissemination.html.ead.level.item=Documento
+crosswalks.dissemination.html.ead.origination=Origem
+crosswalks.dissemination.html.ead.dateofinitialphysicaldescription=Data inicial da descrição física
+crosswalks.dissemination.html.ead.dateoffinalphysicaldescription=Data final da descrição física
+crosswalks.dissemination.html.ead.materialspec=Especificação do material
+crosswalks.dissemination.html.ead.physfacet=Aspeto físico
+crosswalks.dissemination.html.ead.levelofdetail.full=Completo
+crosswalks.dissemination.html.ead.levelofdetail.partial=Parcial
+crosswalks.dissemination.html.ead.levelofdetail.minimal=Mínimo
 crosswalks.dissemination.html.ead.statusdescription.final=Final
 crosswalks.dissemination.html.ead.statusdescription.revised=Verificado
 crosswalks.dissemination.html.ead.statusdescription.draft=Rascunho
@@ -480,3 +537,105 @@ crosswalks.dissemination.html.ead.level.SSUI=Subsubunidade de instalação
 crosswalks.dissemination.html.ead.level.SUI=Subunidade de instalação
 crosswalks.dissemination.html.ead.level.UI=Unidade de instalação
 crosswalks.dissemination.html.ead.level.DS=Documento simples
+
+crosswalks.dissemination.html.ead_3.title=Título
+crosswalks.dissemination.html.ead_3.titletype=Tipo do título
+crosswalks.dissemination.html.ead_3.level=Nível
+crosswalks.dissemination.html.ead_3.initialdate=Data inicial
+crosswalks.dissemination.html.ead_3.finaldate=Data final
+crosswalks.dissemination.html.ead_3.repositorycode=Código do repositório
+crosswalks.dissemination.html.ead_3.reference=Referência
+crosswalks.dissemination.html.ead_3.acquisitionnumber=Número de aquisição
+crosswalks.dissemination.html.ead_3.origination=Origem
+crosswalks.dissemination.html.ead_3.acquistiondate=Data de aquisição
+crosswalks.dissemination.html.ead_3.materialspecification=Detalhes físicos específicos
+crosswalks.dissemination.html.ead_3.physicaldescription=Descrição física
+crosswalks.dissemination.html.ead_3.dateofinitialphysicaldescription=Data inicial da descrição física
+crosswalks.dissemination.html.ead_3.dateoffinalphysicaldescription=Data final da descrição física
+crosswalks.dissemination.html.ead_3.dimensions=Dimensões
+crosswalks.dissemination.html.ead_3.facetorappearance=Aspecto ou aparência
+crosswalks.dissemination.html.ead_3.extent=Extensão
+crosswalks.dissemination.html.ead_3.languages=Idiomas
+crosswalks.dissemination.html.ead_3.quote=Citação
+crosswalks.dissemination.html.ead_3.administrativeandbiographicalhistory=História administrativa e biográfica
+crosswalks.dissemination.html.ead_3.custodialhistory=História custodial
+crosswalks.dissemination.html.ead_3.acquisitioninformation=Modalidades de aquisição
+crosswalks.dissemination.html.ead_3.description=Âmbito e conteúdo
+crosswalks.dissemination.html.ead_3.organizationandordering=Organização e ordenação
+crosswalks.dissemination.html.ead_3.appraisal=Avaliação, selecção e eliminação
+crosswalks.dissemination.html.ead_3.accruals=Ingressos adicionais
+crosswalks.dissemination.html.ead_3.physicalcharacteristicsandtechnicalrequirements=Características físicas e requisitos técnicos
+crosswalks.dissemination.html.ead_3.accessrestrictions=Condições de acesso
+crosswalks.dissemination.html.ead_3.altformavail=Formatos alternativos disponíveis
+crosswalks.dissemination.html.ead_3.reproductionrestrictions=Condições de reprodução
+crosswalks.dissemination.html.ead_3.relatedmaterials=Materiais associados
+crosswalks.dissemination.html.ead_3.otherfindaids=Unidades de descrição relacionadas
+crosswalks.dissemination.html.ead_3.userestrict=Limitações de utilização
+crosswalks.dissemination.html.ead_3.notes=Nota
+crosswalks.dissemination.html.ead_3.originalsloc= Localizações originais
+crosswalks.dissemination.html.ead_3.bibliography=Bibliografia
+crosswalks.dissemination.html.ead_3.unitdate=Data
+crosswalks.dissemination.html.ead_3.control.recordid=Identificador
+crosswalks.dissemination.html.ead_3.control.otherrecordid=Outro identificador
+crosswalks.dissemination.html.ead_3.control.maintenancestatus=Estado de manutenção
+crosswalks.dissemination.html.ead_3.control.publicationstatus=Estado de publicação
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.language=Língua
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.script=Escrita
+crosswalks.dissemination.html.ead_3.control.filedesc.titlestmt=Título
+crosswalks.dissemination.html.ead_3.control.filedesc.publicationstmt=Estado de publicação
+crosswalks.dissemination.html.ead_3.control.maintenanceagency=Estado de manutenção
+crosswalks.dissemination.html.ead_3.control=Controlo
+crosswalks.dissemination.html.ead_3.archdesc=Descrição arquivística
+crosswalks.dissemination.html.ead_3.control.titlestmt.titleproper=Título
+crosswalks.dissemination.html.ead_3.control.titlestmt.subtitle=Subtítulo
+crosswalks.dissemination.html.ead_3.control.titlestmt.author=Autor
+crosswalks.dissemination.html.ead_3.control.titlestmt.sponsor=Patrocínio
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencycode=Código da agência de manutenção
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.otheragencycode=Outro código da agência de manutenção
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencyname=Nome da agência
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.descriptivenote=Nota descritiva sobre a agência de manutenção
+
+crosswalks.dissemination.html.dc.title=Título
+crosswalks.dissemination.html.dc.description=Descrição
+crosswalks.dissemination.html.dc.contributor=Contribuição
+crosswalks.dissemination.html.dc.coverage=Cobertura
+crosswalks.dissemination.html.dc.creator=Autor
+crosswalks.dissemination.html.dc.date=Data
+crosswalks.dissemination.html.dc.date.initial=Data inicial
+crosswalks.dissemination.html.dc.date.final=Data final
+crosswalks.dissemination.html.dc.format=Formato
+crosswalks.dissemination.html.dc.identifier=Identificador
+crosswalks.dissemination.html.dc.language=Língua
+crosswalks.dissemination.html.dc.publisher=Editor
+crosswalks.dissemination.html.dc.relation=Relação
+crosswalks.dissemination.html.dc.rights=Direitos
+crosswalks.dissemination.html.dc.source=Fonte
+crosswalks.dissemination.html.dc.subject=Assuntos
+crosswalks.dissemination.html.dc.type=Tipo
+
+crosswalks.dissemination.html.dc_simpledc20021212.title=Título
+crosswalks.dissemination.html.dc_simpledc20021212.description=Descrição
+crosswalks.dissemination.html.dc_simpledc20021212.contributor=Contribuição
+crosswalks.dissemination.html.dc_simpledc20021212.coverage=Cobertura
+crosswalks.dissemination.html.dc_simpledc20021212.creator=Autor
+crosswalks.dissemination.html.dc_simpledc20021212.date=Data
+crosswalks.dissemination.html.dc_simpledc20021212.date.initial=Data inicial
+crosswalks.dissemination.html.dc_simpledc20021212.date.final=Data final
+crosswalks.dissemination.html.dc_simpledc20021212.format=Formato
+crosswalks.dissemination.html.dc_simpledc20021212.identifier=Identificador
+crosswalks.dissemination.html.dc_simpledc20021212.language=Língua
+crosswalks.dissemination.html.dc_simpledc20021212.publisher=Editor
+crosswalks.dissemination.html.dc_simpledc20021212.relation=Relação
+crosswalks.dissemination.html.dc_simpledc20021212.rights=Direitos
+crosswalks.dissemination.html.dc_simpledc20021212.source=Fonte
+crosswalks.dissemination.html.dc_simpledc20021212.subject=Assuntos
+crosswalks.dissemination.html.dc_simpledc20021212.type=Tipo
+
+crosswalks.dissemination.html.event.identifierType: Tipo de identificador
+crosswalks.dissemination.html.event.identifierValue: Valor do identificador
+crosswalks.dissemination.html.event.dateTime: Data
+crosswalks.dissemination.html.event.outcome: Resultado
+crosswalks.dissemination.html.event.type: Tipo
+crosswalks.dissemination.html.event.detail: Detalhe
+crosswalks.dissemination.html.event.outcomeDetailNote: Nota
+crosswalks.dissemination.html.event.outcomeDetailExtension: Extensão
